# Gaimon

./: .gitignore  Dockerfile  GaimonSetup.py  MANIFEST.in  README.md  ServerPort.md  docker-compose.example.yml  pyproject.toml  requirements-centos.txt  requirements-ubuntu-20.04.txt  requirements.txt  setup.py
NW/: Application.py  config.example.json  package.example.json
archive/: setup.py
archive/core/: DataProcessDecorator.py  ThemeHandler.py
archive/model/: AddressBook.py
archive/util/: RequestUtil.py
changelog/: CHANGELOG.md  TODO-2024-08-11.md
deamon/: Gaimon.desktop  README.txt  daemon.sh  gaimon-deamon  install.py
deploy/pgreplication/: Password.example.json  README.md  ReplicationDeployment.py  clear-data  cluster-pg_hba.conf  cluster-postgres.conf  create-replica  createuser.example.sql  docker-compose.example.yml  prepare-replica
document/: AdvanceInputForm.md  Controller.md  Decorator.md  DesignByCoding.md  Docker.md  DynamicModel.md  Extension.md  FormAttachment.md  History.md  LinuxInstallation.md  MVC.md  Model.md  Permission.md  README.md  TaughtOnScrum.md
document/configuration/: README.md
document/frontend/: DOMObject.md  DataTable.md  MobileApplication.md  Page.md  README.md
gaimon/: ALTER.txt  Extension.json  GaimonApplication.py  GaimonExtension.py  asgi.py
gaimon/cli/: GaimonCLI.py  GaimonNameSpaceInitializerCLI.py  GaimonNotificationCLI.py  GaimonPDFToSVGCLI.py  GaimonUserCreatorCLI.py
gaimon/config/: BackupCron.json  BackupLocal.example.json  BusinessLog.example.json  Database.json  Export.json  Gaimon.example.json  Gaimon.json  Log.json  Notification.example.json  QRRegistration.json  Redis.json  style.yapf  (+2 more)
script/: README.md  gaimon  gaimon-backup-cron  gaimon-backup-full  gaimon-backup-local  gaimon-backup-restore  gaimon-businesslog  gaimon-checkout  gaimon-code-format  gaimon-controller-create  gaimon-display-create  gaimon-docker-prepare  gaimon-export  gaimon-extension-create  gaimon-extension-enable  gaimon-extension-init  gaimon-generate-registration  gaimon-init  gaimon-initializer-create  gaimon-log-analyze  gaimon-model-freeze  gaimon-module-create  gaimon-monitor  gaimon-mvc-create  gaimon-namespace-init  gaimon-namespace-package  gaimon-notification  gaimon-password-renew  gaimon-pdf-to-svg  gaimon-service  gaimon-user-create  giamon-checkout
tutorial/: setup.md
(+810 files in other folders)
